--- a/trunk/cfdesign.tex
+++ b/trunk/cfdesign.tex
@@ -60,7 +60,7 @@ For example, the controls of the one-player Pong game can easily be implemented 
 \centering
 \includegraphics{images/OnePlayerPongCFD.PNG}
 \includegraphics{images/OneFingerPaintingCFD.PNG}
-\caption[Sample Closest Finger Design Scripts For Low Floor Case Projects]{On the left is a sample of how the controls for one-player Pong could be implemented using the Closest Finger Design. On the right is a sample script using the Closest Finger Design to program the paintbrush sprite in one-finger painting.}
+\caption[Sample Closest Finger Design Scripts for Low Floor Case Projects]{On the left is a sample of how the controls for one-player Pong could be implemented using the Closest Finger Design. On the right is a sample script using the Closest Finger Design to program the paintbrush sprite in one-finger painting.}
 \label{OnePlayerPongCFDOneFingerPaintingCFD}
 \end{figure}
 
@@ -77,7 +77,7 @@ The controls for the basic two-player Pong game are extremely similar to that of
 \begin{figure}
 \centering
 \includegraphics{images/BasicTwoPlayerPongCFD.PNG}
-\caption[Sample Closest Finger Design Script For Basic Two-Player Pong]{Here is a sample script for controlling the paddle in a basic two-player Pong game using the Closest Finger Design.}
+\caption[Sample Closest Finger Design Script for Basic Two-Player Pong]{Here is a sample script for controlling the paddle in a basic two-player Pong game using the Closest Finger Design.}
 \label{BasicTwoPlayerPongCFD}
 \end{figure}
 
@@ -99,7 +99,7 @@ The implementation becomes significantly easier if the controls of the advanced 
 \centering
 \includegraphics{images/LeftBumper.PNG}
 \includegraphics{images/BumperScript.PNG}
-\caption[Sample Bumper Detector And Script For Alternate Advanced Two-Player Pong]{On the left is a sample bump detector, colored yellow instead of transparent for visibility. On the right is the bumper detector script which programs the sprite to always follow the left paddle and to initiate a bump when tapped.}
+\caption[Sample Bumper Detector and Script for Alternate Advanced Two-Player Pong]{On the left is a sample bump detector, colored yellow instead of transparent for visibility. On the right is the bumper detector script which programs the sprite to always follow the left paddle and to initiate a bump when tapped.}
 \label{LeftBumperBumperScript}
 \end{figure}
 
@@ -125,7 +125,7 @@ When augmented with the ``when finger pressed" block, the Closest Finger Design 
 \begin{figure}
 \centering
 \includegraphics{images/AdvancedTwoPlayerPongCFD.PNG}
-\caption[Sample Script For Advanced Two-Player Pong Using the Closest Finger Design Extension]{Sample paddle script for advanced two-player Pong using the ``when finger pressed" trigger block.}
+\caption[Sample Script for Advanced Two-Player Pong Using the Closest Finger Design Extension]{Sample paddle script for advanced two-player Pong using the ``when finger pressed" trigger block.}
 \label{AdvancedTwoPlayerPongCFD}
 \end{figure}
 
@@ -134,7 +134,7 @@ The addition of the ``when finger pressed" block still does not make it possible
 \begin{figure}
 \centering
 \includegraphics[width=1.0\textwidth]{images/MultiFingerPaintingCFD.PNG}
-\caption[Sample Script For Multi-Finger Painting Using the Closest Finger Design Extension]{Sample paintbrush script for three-finger painting using the ``when finger pressed" trigger block. Note that more fingers can be supported by adding more paintbrush sprites and additional ``if checks."}
+\caption[Sample Script for Multi-Finger Painting Using the Closest Finger Design Extension]{Sample paintbrush script for three-finger painting using the ``when finger pressed" trigger block. Note that more fingers can be supported by adding more paintbrush sprites and additional ``if checks."}
 \label{MultiFingerPaintingCFD}
 \end{figure}
 
