--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -1,8 +1,16 @@
 \chapter{Introduction} 
 \section{Introduction to Scratch}
-Designed and developed by the Lifelong Kindergarten Group at the MIT Media Lab, Scratch is a graphical, drag-and-drop programming language and environment that allows users of all ages and educational backgrounds (but school-aged children in particular) to easily make and share their own stories, games, and animations\cite{ProgrammingForAll, Monroy-Hernandez}. Scratch was first formally proposed in 2003 as a tool to help young children gain technological fluency, allowing them to use code to express themselves and manifest their imaginations \cite{ScratchProposal}. Since being released to the public in 2007, over 3 million registered users have collectively created and shared well over 5 million projects \cite{ScratchStats} ranging from simple animated cards for Mother's Day to complex, interactive physical simulations. Activity in Scratch grew dramatically in the year following the public release of Scratch 2.0 in May 2013, which allowed Scratch users to develop their projects directly in the browser rather than having to download a separate Scratch development application. 
+Designed and developed by the Lifelong Kindergarten Group at the MIT Media Lab, Scratch is a graphical, drag-and-drop programming language and environment that allows users of all ages and educational backgrounds (but school-aged children in particular) to easily make and share their own stories, games, and animations\cite{ProgrammingForAll, Monroy-Hernandez}. Scratch was first formally proposed in 2003 as a tool to help young children gain technological fluency, allowing them to use code to express themselves and manifest their imaginations \cite{ScratchProposal}. Since being released to the public in 2007, over 3 million registered users have collectively created and shared well over 5 million projects \cite{ScratchStats} ranging from simple animated cards for Mother's Day to complex, interactive physical simulations (see Figure \ref{VarietyOfScratchProjects} for a small sampling of projects). Activity in Scratch grew dramatically in the year following the public release of Scratch 2.0 in May 2013, which allowed Scratch users to develop their projects directly in the browser rather than having to download a separate Scratch development application. 
 
 Scratch users, or \emph{Scratchers} as they are called within the community, make their programs by organizing and connecting various blocks, each representing a command, a value, or a piece of logic. After making their projects, Scratchers can easily share their creations on the Scratch website for other Scratchers to play with, comment on, and remix. There are also forums where Scratchers can share ideas, help one other, and even just hang out.
+
+\begin{figure}
+\centering
+\includegraphics{images/VarietyOfScratchProjects.PNG}
+\caption[Screenshots from a Small Sampling of Scratch Projects]
+{Here are screenshots from a small sampling of Scratch projects.}
+\label{VarietyOfScratchProjects}
+\end{figure}
 
 \subsection{Constructionist Learning and Scratch}
 The design and motivation behind Scratch are deeply influenced by Seymour Papert's contributions to the theory of constructionist learning \cite{Papert}. There are two main ideas behind the theory of constructionist learning, or ``constructionism," as it is also known. The first idea is that it is best to think of learning as the process of the learner constructing ideas for themselves rather than simply as the transfer of knowledge from teacher to learner. The second idea is that learning is most effective when it centers around activities where the learners are creating products that are personally meaningful to them.
