--- a/trunk/main.bib
+++ b/trunk/main.bib
@@ -3,14 +3,14 @@
  
 @mastersthesis{Mehta,
  author="N. Mehta",
- title="A Flexible Machine Interface",
+ title= {A {F}lexible {M}achine {I}nterface},
  school="University of Toronto",
  year="1982"
 }
 
 @article{LBS,
  author = {Lee, SK and Buxton, William and Smith, K. C.},
- title = {A Multi-touch Three Dimensional Touch-sensitive Tablet},
+ title = {A {M}ulti-touch {T}hree {D}imensional {T}ouch-sensitive {T}ablet},
  journal = {SIGCHI Bull.},
  issue_date = {April 1985},
  volume = {16},
@@ -50,7 +50,7 @@
 
 @book{Gamma,
  author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
- title = {Design Patterns: Elements of Reusable Object-oriented Software},
+ title = {Design {P}atterns: {E}lements of {R}eusable {O}bject-oriented {S}oftware},
  year = {1995},
  isbn = {0-201-63361-2},
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
@@ -71,7 +71,7 @@ year = {2011},
 
 @inproceedings{Parent,
     author  = {Parent, S.},
-    title   = {A Possible Future of Software Development},
+    title   = {A {P}ossible {F}uture of {S}oftware {D}evelopment},
     publisher = {Adobe Software Technology Lab},
     year    = {2006},
     note = {http://stlab.adobe.com/wiki/images/0/0c/Possible\_future.pdf},
@@ -119,7 +119,7 @@ year = {2011},
    pagecount   = {20},
    status      = {PUBLISHED},
    submitter   = {177179; 177179},
-   title       = {Deprecating the {O}bserver {P}attern with {S}cala.React},
+   title       = {Deprecating the {O}bserver {P}attern with {S}cala.{R}eact},
    unit        = {LAMP},
    year        = 2012
 }
@@ -161,7 +161,7 @@ year = {2011},
 
 @inproceedings{Monroy-Hernandez,
  author = {Monroy-Hern\'{a}ndez, Andr{\'e}s},
- title = {ScratchR: Sharing User-generated Programmable Media},
+ title = {Scratch{R}: {S}haring {U}ser-generated {P}rogrammable {M}edia},
  booktitle = {Proceedings of the 6th International Conference on Interaction Design and Children},
  series = {IDC '07},
  year = {2007},
@@ -178,7 +178,7 @@ year = {2011},
 }
 
 @book{Papert,
-  title={Mindstorms: Children, Computers and Powerful Ideas},
+  title={Mindstorms: {C}hildren, {C}omputers and {P}owerful {I}deas},
   author={Papert, S.A.},
   isbn={9780786723881},
   url={http://books.google.com/books?id=HhIEAgUfGHwC},
@@ -188,7 +188,7 @@ year = {2011},
 
 @article{Maloney,
  author = {Maloney, John and Resnick, Mitchel and Rusk, Natalie and Silverman, Brian and Eastmond, Evelyn},
- title = {The Scratch Programming Language and Environment},
+ title = {The {S}cratch {P}rogramming {L}anguage and {E}nvironment},
  journal = {Trans. Comput. Educ.},
  issue_date = {November 2010},
  volume = {10},
@@ -227,7 +227,7 @@ received the prestigious Peter Drucker Award for Nonprofit Innovation.},
   intrahash = {27d08810769af9fafc3773c5cb68dcd3},
   keywords = {clubhouse collaboration collaborative components computer constructionism educationalprogramming learning modelling modulat mythesis programming scratch sharing},
   timestamp = {2008-05-30T05:01:38.000+0200},
-  title = {A Networked, Media-Rich Programming Environment to Enhance Technological Fluency at After-School Centers in Economically-Disadvantaged Communities},
+  title = {A {N}etworked, {M}edia-{R}ich {P}rogramming {E}nvironment to {E}nhance {T}echnological {F}luency at {A}fter-{S}chool {C}enters in {E}conomically-{D}isadvantaged {C}ommunities},
   url = {http://web.media.mit.edu/~mres/papers/scratch-proposal.pdf},
   year = 2003
 }
@@ -241,7 +241,7 @@ received the prestigious Peter Drucker Award for Nonprofit Innovation.},
 
 @inproceedings{Reflections,
  author = {Resnick, Mitchel and Silverman, Brian},
- title = {Some Reflections on Designing Construction Kits for Kids},
+ title = {Some {R}eflections on {D}esigning {C}onstruction {K}its for {K}ids},
  booktitle = {Proceedings of the 2005 Conference on Interaction Design and Children},
  series = {IDC '05},
  year = {2005},
