--- a/trunk/ridesign.tex
+++ b/trunk/ridesign.tex
@@ -25,7 +25,7 @@ The parameter is a drop-down menu with values ranging from 1 to 10, but it is al
 \centering
 \includegraphics{images/Relative_Indexing_Design_Block_Set.PNG}
 \includegraphics{images/Relative_Indexing_Design_Block_Dropdown_Show.PNG}
-\caption[Remaining Eight Blocks In The Relative Indexing Design Interaction Set]{On the left are the remaining eight blocks in the Relative Indexing Design interaction set.  On the right there are two examples of the ``finger (\emph{index}) x" block: one with the drop-down menu opened and the other with an inserted function block.}
+\caption[Remaining Eight Blocks in the Relative Indexing Design Interaction Set]{On the left are the remaining eight blocks in the Relative Indexing Design interaction set.  On the right there are two examples of the ``finger (\emph{index}) x" block: one with the drop-down menu opened and the other with an inserted function block.}
 \label{Relative_Indexing_Design_Block_Set}
 \end{figure}
 
@@ -60,7 +60,7 @@ The middle height case projects are not particularly well suited for the Relativ
 \begin{figure}
 \centering
 \includegraphics{images/BasicTwoPlayerPongRID.PNG}
-\caption[Sample Relative Indexing Design Script For Basic Two-Player Pong]{Here is a sample script for controlling the paddle in a basic two-player Pong game using the Relative Indexing Design.}
+\caption[Sample Relative Indexing Design Script for Basic Two-Player Pong]{Here is a sample script for controlling the paddle in a basic two-player Pong game using the Relative Indexing Design.}
 \label{BasicTwoPlayerPongRID}
 \end{figure}
 
@@ -72,7 +72,7 @@ Similarly, implementing the two-finger painting project using the Relative Index
 \centering
 \includegraphics[width=0.415\textwidth]{images/NaiveTwoFingerPaintingRID.PNG}
 \includegraphics[width=0.4\textwidth]{images/IndexTransferLineBug.PNG}
-\caption[Sample Naive Script For Two-Finger Painting Using the Relative Indexing Design ]{On the left is a sample naive paintbrush script using the Relative Indexing Design. On the right is the result of the bug caused by the touch index transferring.}
+\caption[Sample Naive Script for Two-Finger Painting Using the Relative Indexing Design ]{On the left is a sample naive paintbrush script using the Relative Indexing Design. On the right is the result of the bug caused by the touch index transferring.}
 \label{NaiveTwoFingerPaintingRID}
 \end{figure}
 
@@ -84,7 +84,7 @@ There are reasonable solutions (e.g., left side of Figure \ref{WaryTwoFingerPain
 \centering
 \includegraphics[width=0.4\textwidth]{images/WaryTwoFingerPaintingRID.PNG}
 \includegraphics[width=0.5\textwidth]{images/IndexTransferGapBug.PNG}
-\caption[Sample ``Wary" Script For Two-Finger Painting Using the Relative Indexing Design ]{On the left is a sample ``wary" script for the paintbrush using the Relative Indexing Design. On the right is the result of the bug that still exists in the ``wary" script.}
+\caption[Sample ``Wary" Script for Two-Finger Painting Using the Relative Indexing Design ]{On the left is a sample ``wary" script for the paintbrush using the Relative Indexing Design. On the right is the result of the bug that still exists in the ``wary" script.}
 \label{WaryTwoFingerPaintingRID}
 \end{figure}
 
@@ -97,7 +97,7 @@ Similarly, the advanced two-player Pong game is quite difficult to implement usi
 \begin{figure}
 \centering
 \includegraphics[width=1.0\textwidth]{images/AdvancedTwoPlayerPongRID.PNG}
-\caption[Sample Relative Indexing Design Script For Advanced Two-Player Pong]{Here is a sample script for controlling the paddle in an advanced two-player Pong game using the Relative Indexing Design.}
+\caption[Sample Relative Indexing Design Script for Advanced Two-Player Pong]{Here is a sample script for controlling the paddle in an advanced two-player Pong game using the Relative Indexing Design.}
 \label{AdvancedTwoPlayerPongRID}
 \end{figure}
 
